@@ -6,7 +6,7 @@ Requires Python 2.3 or newer.
 
 This file contains all the classes and helper functions specific to IPython.
 
-$Id: iplib.py 2124 2007-03-01 07:19:24Z fperez $
+$Id: iplib.py 2126 2007-03-02 06:51:02Z fperez $
 """
 
 #*****************************************************************************
@@ -2020,8 +2020,26 @@ want to merge them back into the new files.""" % locals()
             return ''
         else:
             return lineout
-        
+
     def split_user_input(self,line):
+        """Split user input into pre-char, function part and rest."""
+
+        lsplit = self.line_split.match(line)
+        if lsplit is None:  # no regexp match returns None
+            try:
+                iFun,theRest = line.split(None,1)
+            except ValueError:
+                iFun,theRest = line,''
+            pre = re.match('^(\s*)(.*)',line).groups()[0]
+        else:
+            pre,iFun,theRest = lsplit.groups()
+
+        #print 'line:<%s>' % line # dbg
+        #print 'pre <%s> iFun <%s> rest <%s>' % (pre,iFun.strip(),theRest) # dbg
+        return pre,iFun.strip(),theRest
+
+        
+    def split_user_inputTMP(self,line):
         """Split user input into pre-char, function part and rest."""
 
         lsplit = self.line_split.match(line)
